[fix] cards same heights with truncate

--- a/OpenDrive/static/css/app.scss
+++ b/OpenDrive/static/css/app.scss
@@ -42,3 +42,9 @@ html {
 .nounderline {
   text-decoration: none !important;
 }
+
+.truncate-line {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
